[B]Version v1.5.1[/B]
- Updated DT TV Shows parsing and also added continuous play feature.
- Updated turtle version to 1.4.7 for immediate fixes.

[B]Version v1.5.0[/B]
- Updated turtle version to 1.4.2.

[B]Version v1.4.9[/B]
- Updated turtle version to 1.4.0.

[B]Version v1.4.8[/B]
- Moved to new directory structure.

[B]Version v1.4.5[B]
- Added new Turtle v1.3.2 dependency. Turtle takes care of cleaning objects.

[B]Version v1.4.2 - v1.4.4[B]
- Fixed some issues related to resolving streaming links
- Enabled caching of channels JSON file.

[B]Version v1.4.1[/B]
- DirectPlay is redefined as PDP (Preferred Direct Play). Enabled for DR only.
- Continuous Play: a new replacement for DirectPlay existing functionality